--- a/SplinesAndCurves Sandbox.ipynb
+++ b/SplinesAndCurves Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f16e86f2",
+   "id": "8030f7c5",
    "metadata": {},
    "source": [
     "## Splines & Curves Sandbox"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "be27a1bf",
+   "id": "47ca1d92",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ff65a939",
+   "id": "79380ad9",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "aac0b975",
+   "id": "1eec4202",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a73083ed",
+   "id": "043cb983",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b4da8fd1",
+   "id": "6d1f1171",
    "metadata": {},
    "outputs": [
     {
@@ -125,8 +125,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "78223fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.array([1, 1, 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b7d0f31f",
+   "id": "2d51ceef",
    "metadata": {},
    "outputs": [],
    "source": []
