SLERP vs LERP working :)

--- a/SplinesAndCurves Sandbox.ipynb
+++ b/SplinesAndCurves Sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8030f7c5",
+   "id": "13e2b15d",
    "metadata": {},
    "source": [
     "## Splines & Curves Sandbox"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "47ca1d92",
+   "id": "b120cf00",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "79380ad9",
+   "id": "855392ff",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1eec4202",
+   "id": "aa1535b8",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "043cb983",
+   "id": "d17133de",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "6d1f1171",
+   "id": "d84fc640",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "78223fa6",
+   "id": "9b744dab",
    "metadata": {},
    "outputs": [
     {
@@ -146,8 +146,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "011d9f5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.asarray((1, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2d51ceef",
+   "id": "0d7af173",
    "metadata": {},
    "outputs": [],
    "source": []
