--- a/SplinesAndCurves Sandbox.ipynb
+++ b/SplinesAndCurves Sandbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "b120cf00",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "array([1, 2, 3, 5])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "855392ff",
    "metadata": {},
    "outputs": [
@@ -47,7 +47,7 @@
        "       [ -4,  -7, -10]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "aa1535b8",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "array([-1,  1])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "d17133de",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n6/__4xwp6930gdgr6t72wmry8m0000gn/T/ipykernel_89721/2327359900.py:3: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "/var/folders/n6/__4xwp6930gdgr6t72wmry8m0000gn/T/ipykernel_98585/14888554.py:3: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
       "  cam_to_screen = np.array([[30, 0, 0, 0],\n"
      ]
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "d84fc640",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "array([ 4, 10])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "9b744dab",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "3"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "011d9f5a",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,8 +167,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "0d7af173",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[250.0, 244.0, 238.0, 232.0, 226.0, 220.0, 214.0, 208.0, 202.0, 196.0, 190.0]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def lerp(a, b, t):\n",
+    "    return ((1-t) * a) + (t * b)\n",
+    "\n",
+    "def angular_lerp(a, b, t):\n",
+    "    a %= 360\n",
+    "    b %= 360\n",
+    "    if a == b:\n",
+    "        return a\n",
+    "    \n",
+    "    elif a < b:\n",
+    "        if b - a <= 180:\n",
+    "            return lerp(a, b, t)\n",
+    "        \n",
+    "        # Else b - a > 180\n",
+    "        return (a - lerp(0, 360 - b + a, t)) % 360\n",
+    "    \n",
+    "    # Else a > b\n",
+    "    if a - b <= 180:\n",
+    "        return (a - lerp(0, a - b, t)) % 360\n",
+    "\n",
+    "    # Else a - b > 180\n",
+    "    return (a + lerp(0, 360 - a + b, t)) % 360\n",
+    "            \n",
+    "    \n",
+    "\n",
+    "    \n",
+    "a = 250\n",
+    "b = 190\n",
+    "[angular_lerp(a, b, t) for t in np.arange(0, 1+0.1, 0.1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9360c7d2",
    "metadata": {},
    "outputs": [],
    "source": []
